# sp2p

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs
.github/workflows/: release.yml
src/: main.rs
src/core/: config.rs  crypto.rs  dirs.rs  mod.rs  notifications.rs  router.rs  state.rs  watcher.rs
src/discovery/: broadcast.rs  mod.rs  upnp.rs
src/transfer/: client.rs  server.rs
src/ui/: dashboard.rs
src/ui/dashboard/: mod.rs  paint.rs  settings.rs  theme.rs  window.rs
tests/: integration_test.rs
wix/: License.rtf  main.wxs
