[package]
name = "sp2p"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
igd = "0.12.1"
local-ip-address = "0.6.10"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tray-item = "0.10.0"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.27.0"
