[package]
name = "sp2p"
version = "0.1.0"
edition = "2024"
description = "A straightforward file-sharing tool."
authors = ["Ifal nou"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
igd = "0.12.1"
local-ip-address = "0.6.10"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tray-item = "0.10.0"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }
snow = "0.9"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
blake3 = "1.8.3"
eframe = "0.29.0"
notify-rust = "4.11.3"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.13"
winit = "0.30"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.27.0"
